@@ -21,8 +21,7 @@ $INSTALL_DIR/bin/java \\
   -XX:NewRatio=1 \\
   -Xms100m \\
   -Xmx100m \\
-  -XX:+AutoCreateSharedArchive \\
-  -XX:SharedArchiveFile=\$TMP/sapper.jsa \\
+  -XX:+UseCompactObjectHeaders \\
   --enable-native-access=javafx.graphics \\
   --sun-misc-unsafe-memory-access=allow \\
   --module sapper/org.panteleyev.sapper.SapperApplication
